--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,14 @@
         android:label="trash_dump"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyBE3E_wAnSd44n_zbjuillUyhZoCNfxyic"/>
+
+
+
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -26,7 +34,9 @@
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
+         
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+        
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
