--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   getwidget: ^3.1.1
   shared_preferences: ^2.2.0
   flutter_config: ^2.0.1
+  flutter_dotenv:
 
 dev_dependencies:
   flutter_test:
